# pneumatic-actuator-design

./: .gitignore  README.md  cascaded_optimization.py  copy_output_sequential.py  multigrid_optimization.py
cervix_inflation/: LORIP45V5_ut_cx.msh  run_MR_Conradlow.json  state_MR_Conradlow.json  surface_selections.txt  volume_selections.txt
finger/: run_finger.json  state_finger.json  surface_selections.txt
frog/: run_frog_quasistatic.json  state_frog_quasistatic.json  surface_selections.txt
gripper_bellows/: cylinder_to_grasp_coarse.msh  gripper_bellows_thick.msh  run_gripper_bellows_log_inside.json  state_gripper_bellows.json  surface_selections_thick.txt
setup_scene_3d/: CMakeLists.txt  clean_mesh.py  setup_3d.cpp
setup_scene_3d/cmake/: cli11.cmake  json.cmake  libigl.cmake
setup_scene_3d/json_configs/: finger.json  frog.json  gripper.json
walker/: gen_walker.py  run_walker.json  state_walker.json  state_walker_optimized.json
worm/: create_surfaces_selections.py  cube.msh  run_worm.json  state_worm.json  surface_selections_long.txt  worm_long_clean.msh
